<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.SindhiManu.Tipno.MainActivity">

    <soup.neumorphism.NeumorphTextView
        android:id="@+id/header_title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sindhi_tipno"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/black"
        app:boxBackgroundMode="outline"
        android:layout_centerHorizontal="true"
        android:id="@+id/year_dropdown"
        android:layout_below="@id/header_title"
        >

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:contentDescription="@string/year_selection_dropdown"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/year_dropdown"
        >

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/month_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/buttons_jan_feb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/Jan"
                    android:background="@null"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/teal_200"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:text="@string/january"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_weight="1"/>

                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/Feb"
                    android:background="@null"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:text="@string/february"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/Mar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/march"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/Apr"
                    android:layout_width="0dp"
                    android:background="@null"
                    android:layout_height="wrap_content"
                    android:text="@string/april"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_weight="1"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/May"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:text="@string/may"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/Jun"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:background="@null"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:text="@string/june"
                    android:textSize="15sp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/Jul"
                    android:layout_width="0dp"
                    android:background="@null"
                    android:layout_height="wrap_content"
                    android:text="@string/july"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/Aug"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/august"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/Sep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/september"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/Oct"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/october"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_weight="1"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/Nov"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/november"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <soup.neumorphism.NeumorphButton
                    style="@style/Widget.Neumorph.Button"
                    android:id="@+id/Dec"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/december"
                    app:neumorph_backgroundColor="@color/orange"
                    app:neumorph_shadowColorDark="@color/orange_dark"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_weight="1"/>


            </LinearLayout>

            <soup.neumorphism.NeumorphImageButton
                android:id="@+id/jhulelal"
                android:contentDescription="@string/jhulelal_photo"
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/jhulelal_murti"
                app:neumorph_shapeType="basin" />

        </LinearLayout>

    </ScrollView>





</RelativeLayout>